[package]
name = "reqwest_resume"
version = "0.2.1"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","encoding","rust-patterns","network-programming"]
keywords = ["http", "request", "client", "retry"]
description = """
Wrapper that uses the `Range` HTTP header to resume get requests.

It's a thin wrapper around `reqwest`. It's a work in progress – wrapping functionality is copied across on an as-needed basis. Feel free to open a PR/issue if you need something.
"""
repository = "https://github.com/alecmocatta/reqwest_resume"
homepage = "https://github.com/alecmocatta/reqwest_resume"
documentation = "https://docs.rs/reqwest_resume/0.2.1"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/reqwest_resume", pipeline = "tests" }
maintenance = { status = "passively-maintained" }

[dependencies]
reqwest = "0.9"
log = "0.4"
hyperx = "0.15"

[dev-dependencies]
flate2 = "1.0"
