[package]
name = "reqwest_resume"
version = "0.3.2"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","encoding","rust-patterns","network-programming"]
keywords = ["http", "request", "client", "retry"]
description = """
Wrapper that uses the `Range` HTTP header to resume get requests.

It's a thin wrapper around `reqwest`. It's a work in progress – wrapping functionality is copied across on an as-needed basis. Feel free to open a PR/issue if you need something.
"""
repository = "https://github.com/alecmocatta/reqwest_resume"
homepage = "https://github.com/alecmocatta/reqwest_resume"
documentation = "https://docs.rs/reqwest_resume/0.3"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/reqwest_resume", pipeline = "tests", build = "15" }
maintenance = { status = "passively-maintained" }

[dependencies]
bytes = "0.5"
futures = "0.3"
hyperx = { version = "1.0", features = ["headers"] }
reqwest = { version = "0.10", features = ["stream"] }
tokio = { version = "1.8", default-features = false }

[dev-dependencies]
async-compression = { version = "0.3.3", features = ["gzip", "futures-bufread"] }
tokio = { version = "1.8", default-features = false, features = ["macros"] }
